# meridian

./: .gitignore  ARCHITECTURE.md  LICENSE  PROCESS.md  README.md  RELEASE_NOTES.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
adr/: 0000-template.md  0001-architecture-first-control-model.md  0002-static-threshold-enforcement.md  0003-citation-validation-required.md  0004-offline-evaluation-harness.md  0005-rest-v0-grpc-documented.md
api/: main.py
core/: config.py  logging.py
eval/data/: baseline_tests.json
providers/: azure_openai_provider.py  base.py  ollama_provider.py
scripts/: seed_data.py
services/control/: control_plane.py
services/retrieval/: azure_search_adapter.py  base.py  chroma_store.py
tests/: test_control_plane.py
tests/evaluation/: evaluate.py
